Adjusted mobile segment for the services page as the interaction and 50/50 screen split won't work

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Sep 29 2020 12:57:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 30 2020 13:14:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -33,14 +33,13 @@
   <div id="About" class="about_section">
     <div class="main_container">
       <h2 class="section_h2">About</h2>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="_4_block_row">
         <div class="_4_block"><img src="images/experienced_acupuncturists.png" loading="lazy" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">Over 20+ Experience</h4>
           <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
         <div class="_4_block"><img src="images/top_rated_professionals.png" loading="lazy" alt="" class="eastern_medicine_icons">
-          <h4 class="icon_h3">5-Star Quality Acupuncturists</h4>
+          <h4 class="icon_h3">5-Star Rated Acupuncturists</h4>
           <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
         <div class="_4_block"><img src="images/world_class_quality.png" loading="lazy" alt="" class="eastern_medicine_icons">
@@ -52,13 +51,14 @@
           <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
       </div>
+      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="_2_block_row">
         <div class="_65_block"></div>
         <div class="_35_block">
           <div class="div-block"></div>
         </div>
       </div>
-      <div></div>
+      <div class="insurance_block"></div>
       <div>
         <div class="w-layout-grid grid-2">
           <h3 class="hours_h3_left">Monday:</h3>
@@ -88,17 +88,17 @@
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="cards_grid">
         <div id="w-node-bb3cbd291ef5-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/needles_close_up.jpg" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/needles_close_up.jpg" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, 31vw" alt="" class="cards_img"></div>
           <h3 class="card_h3">Acupuncture</h3>
           <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
         <div id="w-node-bb3cbd291f03-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
           <p id="w-node-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
         <div id="w-node-bb3cbd291efc-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/cupping.jpg" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/cupping.jpg" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
           <p id="w-node-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
@@ -115,7 +115,7 @@
           <p id="w-node-7dade4327f1a-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
         <div id="w-node-7dade4327f1c-bfb09bd8" class="card">
-          <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
           <p id="w-node-7dade4327f21-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
