--- a/ourteam.html
+++ b/ourteam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Sep 29 2020 12:57:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 30 2020 13:14:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -35,11 +35,11 @@
         <div class="_45_block margin_right">
           <p class="paragraph-7">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
         </div>
-        <div class="_55_block margin_left"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 47vw, (max-width: 991px) 48vw, 53vw" alt=""></div>
+        <div class="_55_block margin_left"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 47vw, 53vw" alt=""></div>
       </div>
       <div class="blue_divide"></div>
       <div class="_2_block_row margin_bottom">
-        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 991px) 28vw, 32vw" alt="" class="image"></div>
+        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 28vw, 32vw" alt="" class="image"></div>
         <div class="_65_block margin_left">
           <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
           <h4 class="ryu_h4">Specialties:</h4>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="_2_block_row margin_top">
-        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 991px) 28vw, 32vw" alt=""></div>
+        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 28vw, 32vw" alt=""></div>
         <div class="_65_block margin_left">
           <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
           <h4 class="ryu_h4">Specialties:</h4>
