Added additional slide in interactions for various elements throught the pages

--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Sep 30 2020 18:32:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Oct 01 2020 08:57:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -87,7 +87,7 @@
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_acupuncture"></div>
       <div class="services_mobile_header_block">
-        <h3 class="services_h3_mobile">Acupuncture</h3>
+        <h3 data-w-id="46b1f506-6760-85bc-e9e0-8a362d1b5a97" style="opacity:0" class="services_h3_mobile">Acupuncture</h3>
       </div>
     </div>
     <div class="services_mobile_info_block">
@@ -97,7 +97,7 @@
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_herbs"></div>
       <div class="services_mobile_header_block">
-        <h3 class="services_h3_mobile">Traditional Chinese Herbs</h3>
+        <h3 data-w-id="0d5b5449-9348-464a-b400-3c40748e0278" style="opacity:0" class="services_h3_mobile">Traditional Chinese Herbs</h3>
       </div>
     </div>
     <div class="services_mobile_info_block">
@@ -107,7 +107,7 @@
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_cupping"></div>
       <div class="services_mobile_header_block">
-        <h3 class="services_h3_mobile">Cupping</h3>
+        <h3 data-w-id="84703f10-413d-a196-1e72-ff36ab56a04b" style="opacity:0" class="services_h3_mobile">Cupping</h3>
       </div>
     </div>
     <div class="services_mobile_info_block">
@@ -117,7 +117,7 @@
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_ear_seeds"></div>
       <div class="services_mobile_header_block">
-        <h3 class="services_h3_mobile">Auriculotherapy</h3>
+        <h3 data-w-id="e5bb646e-78e0-a176-31c7-12c0d1cc314a" style="opacity:0" class="services_h3_mobile">Auriculotherapy</h3>
       </div>
     </div>
     <div class="services_mobile_info_block">
@@ -127,7 +127,7 @@
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_moxibustion"></div>
       <div class="services_mobile_header_block">
-        <h3 class="services_h3_mobile">Moxibustion</h3>
+        <h3 data-w-id="43c6c528-eff4-524d-16ce-1a0fad73a323" style="opacity:0" class="services_h3_mobile">Moxibustion</h3>
       </div>
     </div>
     <div class="services_mobile_info_block">
@@ -137,7 +137,7 @@
     <div class="_2_block_row_services_mobile">
       <div class="services_mobile_picture_block_infrared_treatment"></div>
       <div class="services_mobile_header_block">
-        <h3 class="services_h3_mobile">Heat Therapy</h3>
+        <h3 data-w-id="ffeb613b-c406-5da0-d90e-ada0628f7dd8" style="opacity:0" class="services_h3_mobile">Heat Therapy</h3>
       </div>
     </div>
     <div class="services_mobile_info_block">
